unpackaged/main/default/objects/PricebookEntry/fields/Pricebook_Valid__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Valid__c</fullName>
    <formula>Product2.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Valid</label>
    <type>Checkbox</type>
</CustomField>