unpackaged/main/default/objects/PricebookEntry/fields/ProductExtId__c.field-meta.xml
<CustomField>
    <fullName>ProductExtId__c</fullName>
    <externalId>true</externalId>
    <label>ProductExtId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>