unpackaged/main/default/objects/PricebookEntry/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <formula>Product2.ProductCode&amp;"-"&amp;TEXT(CurrencyIsoCode)&amp;"-"&amp;Pricebook2.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueID</label>
    <type>Text</type>
</CustomField>